fix footer to align

--- a/styles/5-components/footer.scss
+++ b/styles/5-components/footer.scss
@@ -1,6 +1,6 @@
 .c-footer {
-    background: rgb(var(--color-1));
-    color: rgb(var(--color-bg));
+    background: #f8f5f2;
+    color: gray;
     padding: space(4xl) 0;
 
     &__partners {
